--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
@@ -87,6 +87,9 @@
             <input id="light" name="light" type="hidden" class="validate" th:value="${machine.light}"/>
             <input id="charge" name="charge" type="hidden" class="validate" th:value="${machine.charge}"/>
             <input id="checked" name="checked" type="hidden" class="validate" th:value="${machine.checked}"/>
+            <input id="addTime" name="addTime" type="hidden" class="validate" th:value="${machine.addTime}"/>
+            <input id="codeNumber-ro" name="codeNumber" type="hidden" class="validate" th:value="${machine.codeNumber}"
+                   th:if="${machine.id!=newEntityID}"/>
 
             <div class="row">
                 <div class="input-field col s6 m6 l6">
@@ -117,19 +120,10 @@
                     <label for="address">广告机地址</label>
                 </div>
 
-                <div class="input-field col s6 m6 l6">
-                    <i class="material-icons prefix">date_range</i>
-                    <input id="addTime-ro" name="addTime" type="text" placeholder="选择加入时间" readonly="readonly"
-                           th:value="${machine.addTime}" th:if="${machine.addTime!=' '}"/>
-                    <label for="addTime-ro" th:if="${machine.addTime!=' '}">加入时间</label>
-                    <input id="addTime" name="addTime" type="text" class="date-picker" placeholder="选择加入时间"
-                           th:value="${machine.addTime==' '?'':machine.addTime}" th:if="${machine.addTime==' '}"/>
-                    <label for="addTime" th:if="${machine.addTime==' '}">加入时间</label>
-                </div>
-                <div class="input-field col s6 m6 l6">
+                <div class="input-field col s6 m6 l6" th:if="${machine.id==newEntityID}">
                     <i class="material-icons prefix">code</i>
-                    <input id="codeNumber" name="codeNumber" type="text" readonly="readonly" class="validate"
-                           placeholder="" th:value="${machine.codeNumber}"/>
+                    <input id="codeNumber" name="codeNumber" type="text"
+                           class="validate" placeholder="" th:value="${machine.codeNumber}"/>
                     <label for="codeNumber">机器识别码</label>
                 </div>
 
