删除功能JS参数调整，消除单引号问题

--- a/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
+++ b/src/main/webapp/WEB-INF/templates/advertisement/advertisementList.html
@@ -179,7 +179,7 @@
                             <li>
                                 <a class="btn-floating red darken-1 waves-effect waves-light tooltipped btn modal-trigger"
                                    data-position="top" data-delay="50" data-tooltip="删除" href="#delete-modal"
-                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\', \''+${item.name}+'\')'">
+                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\')'">
                                     <i class="material-icons">delete</i>
                                 </a>
                             </li>
@@ -216,7 +216,7 @@
                             <li>
                                 <a class="btn-floating red darken-1 waves-effect waves-light tooltipped btn modal-trigger"
                                    data-position="top" data-delay="50" data-tooltip="删除" href="#delete-modal"
-                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\', \''+${item.name}+'\')'">
+                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\')'">
                                     <i class="material-icons">delete</i>
                                 </a>
                             </li>
@@ -419,9 +419,15 @@
         $("#upload-target-id").val(id);
     }
 
-    function prepareForDeleting(id, name) {
+    function prepareForDeleting(id) {
         $("#delete-confirm-id").val(id);
-        $("#delete-name").text(name);
+        $.ajax({
+            url: '[[${adminPath}]]/advertisement/detail/' + id,
+            type: "GET",
+            success: function (data) {
+                $("#delete-name").text(data['ad'].name);
+            }
+        })
     }
 
     function pauseVideo() {
