--- a/src/main/webapp/WEB-INF/templates/role/roleList.html
+++ b/src/main/webapp/WEB-INF/templates/role/roleList.html
@@ -143,7 +143,7 @@
                             <li>
                                 <a class="btn-floating red darken-1 waves-effect waves-light tooltipped btn modal-trigger"
                                    data-position="top" data-delay="50" data-tooltip="删除" href="#delete-modal"
-                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\',\''+${item.name}+'\')'"
+                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\')'"
                                    th:if="${item.id!=adminRoleID}">
                                     <i class="material-icons">delete</i>
                                 </a>
@@ -173,7 +173,7 @@
                             <li>
                                 <a class="btn-floating red darken-1 waves-effect waves-light tooltipped btn modal-trigger"
                                    data-position="top" data-delay="50" data-tooltip="删除" href="#delete-modal"
-                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\',\''+${item.name}+'\')'"
+                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\')'"
                                    th:if="${item.id!=adminRoleID}">
                                     <i class="material-icons">delete</i>
                                 </a>
@@ -301,9 +301,15 @@
         });
     }
 
-    function prepareForDeleting(id, name) {
+    function prepareForDeleting(id) {
         $("#delete-confirm-id").val(id);
-        $("#delete-name").text(name);
+        $.ajax({
+            url: '[[${adminPath}]]/role/detail/' + id,
+            type: "GET",
+            success: function (data) {
+                $("#delete-name").text(data['ad'].name);
+            }
+        })
     }
 </script>
 </body>
