--- a/src/main/webapp/WEB-INF/templates/user/userList.html
+++ b/src/main/webapp/WEB-INF/templates/user/userList.html
@@ -193,7 +193,7 @@
                             <li>
                                 <a class="btn-floating red darken-1 waves-effect waves-light tooltipped btn modal-trigger"
                                    data-position="top" data-delay="50" data-tooltip="删除" href="#delete-modal"
-                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\', \''+${item.username}+'\')'">
+                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\')'">
                                     <i class="material-icons">delete</i>
                                 </a>
                             </li>
@@ -236,7 +236,7 @@
                             <li>
                                 <a class="btn-floating red darken-1 waves-effect waves-light tooltipped btn modal-trigger"
                                    data-position="top" data-delay="50" data-tooltip="删除" href="#delete-modal"
-                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\', \''+${item.username}+'\')'">
+                                   th:onclick="'javascript:prepareForDeleting(\''+${item.id}+'\')'">
                                     <i class="material-icons">delete</i>
                                 </a>
                             </li>
@@ -443,9 +443,15 @@
         });
     }
 
-    function prepareForDeleting(id, name) {
+    function prepareForDeleting(id) {
         $("#delete-confirm-id").val(id);
-        $("#delete-name").text(name);
+        $.ajax({
+            url: '[[${adminPath}]]/user/detail/' + id,
+            type: "GET",
+            success: function (data) {
+                $("#delete-name").text(data['ad'].name);
+            }
+        })
     }
 
     function prepareForPasswd(id) {
