--- a/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
+++ b/src/main/webapp/WEB-INF/templates/advertisementMachine/advertisementMachineForm.html
@@ -18,6 +18,7 @@
 <!--/*@thymesVar id="loginUser" type="com.xmlan.machine.module.user.entity.User"*/-->
 <!--/*@thymesVar id="machine" type="com.xmlan.machine.module.advertisementMachine.entity.AdvertisementMachine"*/-->
 <!--/*@thymesVar id="userList" type="java.util.List<com.xmlan.machine.module.user.entity.SimpleUser>"*/-->
+<!--/*@thymesVar id="token" type="java.lang.String"*/-->
 <!--/* </editor-fold> */-->
 
 <body>
@@ -81,6 +82,7 @@
     <br/>
     <div id="main-content" class="container">
         <form th:action="@{${adminPath}+'/advertisementMachine/save/'+${machine.id}}" method="post">
+            <input name="token" th:value="${token}" type="hidden"/>
             <input id="id" name="id" type="hidden" class="validate" required="required" th:value="${machine.id}"/>
             <input id="longitude" name="longitude" type="hidden" class="validate" th:value="${machine.longitude}"/>
             <input id="latitude" name="latitude" type="hidden" class="validate" th:value="${machine.latitude}"/>
