--- a/src/main/webapp/WEB-INF/templates/user/userForm.html
+++ b/src/main/webapp/WEB-INF/templates/user/userForm.html
@@ -212,7 +212,7 @@
             return false;
         }
         // Phone validate
-        if (!(/^((86)|(\+86))?(\-)?1[3|4|5|7|8][0-9]\d{8}$/.test($("#phone").val()))) {
+        if (!(/^(([+])?(86)(-)?)?1[3|4|5|7|8]\d{9}$/.test($("#phone").val()))) {
             toast("手机号格式不正确");
             return false;
         }
